--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -29,4 +29,14 @@
         <i class="fas fa-pinterest mx-2">
         </i>
     </div>
+    <div class="space-x-4 text-center">
+        <i class="fab fa-facebook-f">
+        </i>
+        <i class="fab fa-twitter">
+        </i>
+        <i class="fab fa-instagram">
+        </i>
+        <i class="fab fa-linkedin-in">
+        </i>
+    </div>
 </footer>
