--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -1,6 +1,6 @@
 <header class="bg-pink-500 text-white">
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
-        <div><img class="w-[120px] h-auto" src="images/Craftora_logo.png" alt="brand icon"></div>
+        <div><img class="w-[120px] h-auto" src="/images/Craftora_logo.png" alt="brand icon"></div>
         <div class="flex items-center space-x-4">
 
             <input class="px-4 py-2 rounded-full" placeholder="Search" type="text" />
@@ -9,26 +9,21 @@
             </button>
         </div>
         <nav class="flex space-x-4">
-
-            <a class="hover:underline" href="#">
-                Home
-            </a>
-            <a class="hover:underline" href="#">
-                Contact
-            </a>
-            <a class="hover:underline" href="#">
-                About
-            </a>
-            <a class="flex items-center text-gray-600 hover:bg-gray-200 rounded-md" href="/user/logout">
-                <i class="fas fa-sign-out-alt mr-3"></i>Log out
-            </a>
-            <% if (!greetName){%>
-                <a class="hover:underline" href="#">
-                    Sign Up
-                </a>
-                <a class="hover:underline" href="#">
-                    Sign In
-                </a>
+            <a class="hover:underline" href="#">Home</a>
+            <a class="hover:underline" href="#">Products</a>
+            <a class="hover:underline" href="#">About</a>
+            <a class="hover:underline" href="#">Contact </a>
+            <% if (!greetName || typeof greetName === 'undefined'){ %>
+                <a class="hover:underline" href="/user/login">Sign Up</a>
+                <a class="hover:underline" href="/user/login">Sign In</a>
+            <% } else{ %>
+                <div class="text-white space-x-2">
+                    <a href="/user/wishlist"><i class="fas fa-heart"></i></a>
+                    <a href="/user/cart"><i class="fas fa-shopping-cart"></i></a>
+                    <a href="/user/dashboard"><i class="fas fa-user"></i></a>
+                </div>
+                <a class="flex items-center text-gray-600 hover:bg-gray-200 rounded-md" href="/user/logout">
+                    <i class="fas fa-sign-out-alt mr-3"></i>Log out</a>
             <% } %>
         </nav>
     </div>
