fixed some bugs and validation not done yet

--- a/views/admin/category folder/add_category.ejs
+++ b/views/admin/category folder/add_category.ejs
@@ -10,7 +10,7 @@
                 <div class="mt-4 text-sm text-gray-500">
                     <a href="/admin/home" class="text-blue-500">Dashboard</a>
                     &gt;
-                    <a href="#" class="text-blue-500">Categories</a>
+                    <a href="/admin/categories" class="text-blue-500">Categories</a>
                     &gt;
                     <span>Add Category</span>
                 </div>
