--- a/views/admin/product folder/edit_product.ejs
+++ b/views/admin/product folder/edit_product.ejs
@@ -3,6 +3,7 @@
         font-family: 'Inter', sans-serif;
     }
 </style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css">
 <div class="flex">
     <!-- Sidebar -->
     <%-include('../../partials/admin/side bar')%>
@@ -57,45 +58,21 @@
                                     </div>
                                     <div class="mt-6 bg-white p-6 rounded-lg shadow-md">
                                         <h3 class="text-lg font-semibold text-gray-700">Media</h3>
-                                        <!-- <div class="row">
-                                            <div class="card-body align-items-center" style="margin-bottom: 20px;">
-                                                <img src="" alt="image 1" id="imgView1">
-                                                <input class="form-control" type="file" name="images" id="input1"
+                                        <% productDetails.image.forEach((image,index)=>{ %>
+                                        <div class="row">
+                                            <div id="previewImage<%= index %>" class="card-body align-items-center" style="margin-bottom: 20px;">
+                                                <img src="/uploads/product-images/<%= image %>" alt="" id="imgView<%= index %>">
+                                                <input class="form-control" type="file" name="images" id="input<%= index %>"
                                                     accept="image/png, image/jpeg, image/jpg"
-                                                    onchange="viewImage(event),viewImage(event, 1)">
+                                                    onchange="viewImage(event,'<%= index %>')">
                                             </div>
                                             <div class="image-cropper d-flex align-items-center"
                                                 style="display:none; width: 300px; height: 200px; margin-bottom: 20px;">
-                                                <img src="" id="croppedImg1" alt="">
-                                                <button type="button" id="saveButton1" class="btn-sm btn-primary">Save</button>
+                                                <img src="" id="croppedImg<%= index %>" alt="">
+                                                <button type="button" id="saveButton<%= index %>" class="btn-sm btn-primary">Save</button>
                                             </div>
                                         </div>
-                                        <div class="row">
-                                            <div class="card-body align-items-center" style="margin-bottom: 20px;">
-                                                <img src="" alt="" id="imgView2">
-                                                <input class="form-control" type="file" name="images" id="input2"
-                                                    accept="image/png, image/jpeg, image/jpg"
-                                                    onchange="viewImage(event),viewImage(event, 2)">
-                                            </div>
-                                            <div class="image-cropper d-flex align-items-center"
-                                                style="display:none; width: 300px; height: 200px; margin-bottom: 20px;">
-                                                <img src="" id="croppedImg2" alt="">
-                                                <button type="button" id="saveButton2" class="btn-sm btn-primary">Save</button>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="card-body align-items-center" style="margin-bottom: 20px;">
-                                                <img src="" alt="" id="imgView3">
-                                                <input class="form-control" type="file" name="images" id="input3"
-                                                    accept="image/png, image/jpeg, image/jpg"
-                                                    onchange="viewImage(event),viewImage(event, 3)">
-                                            </div>
-                                            <div class="image-cropper d-flex align-items-center"
-                                                style="display:none; width: 300px; height: 200px; margin-bottom: 20px;">
-                                                <img src="" id="croppedImg3" alt="">
-                                                <button type="button" id="saveButton3" class="btn-sm btn-primary">Save</button>
-                                            </div>
-                                        </div> -->
+                                        <% }) %>
                                         <!-- <div
                                             class="mt-4 border-dashed border-2 border-gray-300 p-6 rounded-md text-center">
                                             <input type="file" name="image" multiple> 
@@ -237,48 +214,159 @@
                 </div>
         </div>
 </div>
-<script src="JS/admin/product.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/cropperjs/dist/cropper.min.js"></script>
+
 <script>
+    function validateAndSubmit() {
+        if (validateForm()) {
+            document.forms[0].submit();
+        }
+    }
+
+    let cropper;
+    const selectedImages = [];
+
+    // Function to initialize and show the cropper when a new image is selected
     function viewImage(event, index) {
-        let input = event.target;
-        let reader = new FileReader();
-        reader.onload = function () {
-            let dataURL = reader.result;
-            let image = document.getElementById('imgView' + index);
-            image.src = dataURL;
+    const input = event.target;
+    const reader = new FileReader();
 
-            if (cropper) {
-                cropper.destroy();
-            }
+    reader.onload = function () {
+        const dataURL = reader.result;
+        const image = document.getElementById('imgView' + index);
+        const previewImage = document.getElementById('previewImage' + index);
+        image.src = dataURL;
 
-            cropper = new Cropper(image, {
-                aspectRatio: 1,
-                viewMode: 1,
-                background: false,
-                autoCropArea: 1,
-                zoomable: true,
+        if (cropper) {
+            cropper.destroy(); // Destroy previous cropper instance
+        }
+
+        // Initialize the cropper
+        cropper = new Cropper(image, {
+            aspectRatio: 1,
+            viewMode: 1,
+            background: false,
+            autoCropArea: 1,
+            zoomable: true,
+        });
+
+        // Set up the save button
+        document.getElementById('saveButton' + index).onclick = async function () {
+            const croppedCanvas = cropper.getCroppedCanvas();
+            document.getElementById('croppedImg' + index).src = croppedCanvas.toDataURL('image/jpeg', 1.0);
+
+            // Save the cropped image to the input file
+            await croppedCanvas.toBlob(blob => {
+                const imgFile = new File([blob], `cropped-img-${Date.now()}-${index}.png`, { type: blob.type });
+                const fileList = new DataTransfer();
+                fileList.items.add(imgFile);
+                input.files = fileList.files;
             });
 
-            let saveButton = document.querySelector('#saveButton' + index);
-            saveButton.addEventListener('click', async function () {
-                let croppedCanvas = cropper.getCroppedCanvas();
-                let croppedImage = document.getElementById('croppedImg' + index);
-                croppedImage.src = croppedCanvas.toDataURL('image/jpeg', 1.0);
-
-                let timestamp = new Date().getTime();
-                let fileName = `cropped-img-${timestamp}-${index}.png`;
-
-                await croppedCanvas.toBlob(blob => {
-                    let imgFile = new File([blob], fileName, { type: blob.type });
-                    let fileList = new DataTransfer();
-                    fileList.items.add(imgFile);
-                    input.files = fileList.files;
-                });
-
-                cropper.destroy();
-                cropper = null;
-            });
+            // Hide the preview and destroy the cropper
+            cropper.destroy();
+            cropper = null;
+            previewImage.src = ''; // Remove the src of preview image
+            previewImage.style.display = 'none'; // Hide the preview image
         };
-        reader.readAsDataURL(input.files[0]);
+    };
+    reader.readAsDataURL(input.files[0]);
+}
+
+
+    // File selection and display thumbnails with remove option
+    document.getElementById('input'+index).addEventListener('change', handleFileSelect);
+
+    function handleFileSelect(event) {
+        const addedImagesContainer = document.getElementById('addedImagesContainer');
+        addedImagesContainer.innerHTML = '';  // Clear existing thumbnails
+        const files = event.target.files;
+
+        for (let i = 0; i < files.length; i++) {
+            const file = files[i];
+            selectedImages.push(file);
+            const thumbnail = document.createElement('div');
+            thumbnail.classList.add('thumbnail');
+
+            const img = document.createElement('img');
+            img.src = URL.createObjectURL(file);
+            img.alt = 'thumbnail';
+            img.style.width = '50px';
+            img.style.height = 'auto';
+
+            const removeIcon = document.createElement('span');
+            removeIcon.classList.add('remove-icon');
+            removeIcon.innerHTML = '&times;';
+            removeIcon.addEventListener('click', function () {
+                const index = selectedImages.indexOf(file);
+                if (index !== -1) {
+                    selectedImages.splice(index, 1);
+                }
+                thumbnail.remove();
+            });
+
+            thumbnail.appendChild(img);
+            thumbnail.appendChild(removeIcon);
+            addedImagesContainer.appendChild(thumbnail);
+        }
+    }
+
+    // Validation function for the form fields
+    function validateForm() {
+        clearErrorMessages();
+        const name = document.getElementsByName('productName')[0].value;
+        const description = document.getElementById('descriptionid').value;
+        const price = document.getElementsByName('regularPrice')[0].value;
+        const saleprice = document.getElementsByName('salePrice')[0].value;
+        const quantity = document.getElementsByName('quantity')[0].value;
+        const images = document.getElementById('input1');
+        let isValid = true;
+
+        if (!name.trim() || !/^[a-zA-Z\s]+$/.test(name.trim())) {
+            displayErrorMessage('productName-error', 'Product name should contain only alphabetic characters.');
+            isValid = false;
+        }
+
+        if (!description.trim() || !/^[a-zA-Z\s]+$/.test(description.trim())) {
+            displayErrorMessage('description-error', 'Product description should contain only alphabetic characters.');
+            isValid = false;
+        }
+
+        if (!quantity || parseInt(quantity) < 0) {
+            displayErrorMessage('quantity-error', 'Please enter a valid non-negative quantity.');
+            isValid = false;
+        }
+
+        if (!/^\d+(\.\d{1,2})?$/.test(price) || parseFloat(price) < 0) {
+            displayErrorMessage('regularPrice-error', 'Please enter a valid non-negative price.');
+            isValid = false;
+        }
+
+        if (!/^\d+(\.\d{1,2})?$/.test(saleprice) || parseFloat(saleprice) < 0 || parseFloat(price) <= parseFloat(saleprice)) {
+            displayErrorMessage('salePrice-error', 'Sale price must be a valid non-negative price and less than regular price.');
+            isValid = false;
+        }
+
+        if (images.files.length === 0) {
+            displayErrorMessage("images-error", 'Please select an image.');
+            isValid = false;
+        }
+
+        return isValid;
+    }
+
+    // Helper function to display error messages
+    function displayErrorMessage(elementId, message) {
+        const errorElement = document.getElementById(elementId);
+        errorElement.innerText = message;
+        errorElement.style.display = "block";
+    }
+
+    // Helper function to clear error messages
+    function clearErrorMessages() {
+        const errorElements = document.getElementsByClassName('error-message');
+        Array.from(errorElements).forEach(element => {
+            element.innerText = '';
+        });
     }
 </script>
